--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "googleapis": "^152.0.0",
-    "mongoose": "^8.17.1"
+    "mongoose": "^8.17.1",
+    "nodemailer": "^7.0.5"
   }
 }
